# text2pdf

./: LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg
src/text2pdf/: __init__.py  __main__.py  config.yaml  pdfbase.py
tests/: test_text2pdf.py
