[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text2pdf"
dynamic = ["version"]
description = "text typesetter"
readme = "README.md"
license = "MIT"
authors = [
    { name = "shidocchi", email = "shidocchi@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
]
dependencies = [
    "fpdf2",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/shidocchi/text2pdf"

[tool.hatch.version]
path = "src/text2pdf/__init__.py"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["find:"]
